gts-macros/tests/compile_fail/version_missing_in_schema.stderr
error: struct_to_gts_schema: Segment #1: Too few tokens (got 4, min 5). Expected format: vendor.package.namespace.type.vMAJOR[.MINOR]
  --> tests/compile_fail/version_missing_in_schema.rs:10:17
   |
10 |     schema_id = "gts.x.core.events.type~",
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `gts::GtsInstanceId`
 --> tests/compile_fail/version_missing_in_schema.rs:4:5
  |
4 | use gts::GtsInstanceId;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
